# fhfa_data_manager

./: .gitignore  AGENTS.md  README.md  config.py  data_loaders.py  download_fhfa_data.py  hello.py  hive_partition_writer.py  import_fhfa_data.py  import_fhlb_data.py  medallion_pipeline.py  planning.md  pyproject.toml
.cursor/: .cursorignore  README.md  rules.md
.cursor/docs/: architecture-overview.md
.cursor/prompts/: README.md
dictionary_files/2008/: 2008_Multifamily_Census_Tract_File_C_combined.csv  2008_Multifamily_Census_Tract_File_C_combined.parquet  2008_Multifamily_National_File_Property-Level_Data_File_B_combined.csv  2008_Multifamily_National_File_Property-Level_Data_File_B_combined.parquet  2008_Multifamily_National_File_Unit_Class-Level_Data_File_B_combined.csv  2008_Multifamily_National_File_Unit_Class-Level_Data_File_B_combined.parquet  2008_Single_Family_Census_Tract_File_C_combined.csv  2008_Single_Family_Census_Tract_File_C_combined.parquet  2008_Single_Family_National_File_A_combined.csv  2008_Single_Family_National_File_A_combined.parquet  2008_Single_Family_National_File_B_combined.csv  2008_Single_Family_National_File_B_combined.parquet
dictionary_files/2009/: 2009_Multifamily_Census_Tract_File_C_combined.csv  2009_Multifamily_Census_Tract_File_C_combined.parquet  2009_Multifamily_National_File_Property-Level_Data_File_B_combined.csv  2009_Single_Family_Census_Tract_File_C_combined.csv  (+8 more)
old_functions/: deprecated_fhfa_loader_functions.py  download_fhfa_data.py  import_fhfa_data.py  import_fhlb_data.py
scripts/: download_smoke.py
(+182 files in other folders)
